--- a/Lab 4/obrazy.ipynb
+++ b/Lab 4/obrazy.ipynb
@@ -198,28 +198,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.99762\n",
-      "-11.45531020833346\n"
+      "76.999\n",
+      "3.3123788554217017\n"
      ]
     }
    ],
    "source": [
     "rho_woda = 997.62 #kg/m3\n",
     "rho_woda = rho_woda / 1000 #g/cm3\n",
-    "print(rho_woda)\n",
     "m_ps = 29.778\n",
     "m_p = 26.471\n",
-    "m_pw = 50*rho_woda + 25.834\n",
+    "m_pw = 76.999\n",
     "m_px =  79.31\n",
     "\n",
     "rho_MgO = (m_ps-m_p)/(m_ps - m_p - m_px + m_pw)*rho_woda\n",
+    "print(m_pw)\n",
     "print(rho_MgO)"
    ]
   }
